<resources>
    <string name="Song_and_artist_name">Song • %1$s</string>
    <string name="playlist_and_author">Playlist • %1$s</string>
    <string name="album_and_artist_name">Album • %1$s</string>
    <string name="subscribers">%1$s subscribers</string>
    <string name="year_and_category">%1$s • %2$s</string>
    <string name="album_length">%1$s tracks  %2$s</string>
    <string name="view_count">%1$s views</string>
    <string name="lyrics_provider">Lyrics provided by Musixmatch</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading</string>
    <string name="preparing">Preparing</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="na_na">NA:NA</string>
    <string name="cache_size">%1$s MB</string>
    <string name="favorite">Favorite</string>
    <string name="followed">Followed</string>
    <string name="most_played">Most Played</string>
    <string name="Downloaded">Downloaded</string>
    <string name="favorite_playlists">Favorite Playlists</string>
    <string name="no_favorite_playlists">No favorite playlists</string>
    <string name="downloaded_playlists">Downloaded Playlists</string>
    <string name="no_playlists_downloaded">No playlists downloaded</string>
    <string name="your_playlists">Your Local Playlists</string>
    <string name="no_playlists_added">No playlists added</string>
    <string name="recently_added">Recently Added</string>
    <string name="search_for_songs_artists_albums_playlists_and_more">Search for songs, artists, albums, playlists, and more</string>
    <string name="everything_you_need">Everything you need</string>
    <string name="restore_failed">Restore Failed</string>
    <string name="restore_success">Restore Success</string>
    <string name="search">Search</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="error">Error</string>
    <string name="follow">Follow</string>
    <string name="retry">Retry</string>
    <string name="removed_download">Removed download</string>
    <string name="share_url">Share URL</string>
    <string name="available_online">Available online</string>
    <string name="unavailable">Unavailable</string>
    <string name="you">You</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="quick_picks">Quick picks</string>
    <string name="this_song_is_not_available">This song is not available</string>
    <string name="in_charts">in Charts</string>
    <string name="playlist_name_cannot_be_empty">Playlist name cannot be empty</string>
    <string name="this_app_needs_to_access_your_notification">This app needs to access your notification</string>
    <string name="shared">Shared</string>
    <string name="line_synced">Line Synced</string>
    <string name="unsynced">Unsynced</string>
    <string name="playlist_is_empty">Playlist is empty</string>
    <string name="option">Option</string>
    <string name="no_description">No description</string>
    <string name="in_search">in Search</string>
    <string name="clear_player_cache">Clear Player Cache</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="content_country">Content Country</string>
    <string name="change">Change</string>
    <string name="quality">Quality</string>
    <string name="clear_downloaded_cache">Clear Downloaded Cache</string>
    <string name="clear_thumbnail_cache">Clear Thumbnail Cache</string>
    <string name="add">Add</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="edit_title">Edit title</string>
    <string name="edit_thumbnail">Edit thumbnail</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="add_to_a_playlist">Add to a playlist</string>
    <string name="share">Share</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="delete_from_queue">Delete from queue</string>
    <string name="more">More</string>
    <string name="singles">Singles</string>
    <string name="related_artists">Related Artists</string>
    <string name="about">About</string>
    <string name="let_s_start_with_a_radio">LET\'S START WITH A RADIO</string>
    <string name="let_s_pick_a_playlist_for_you">LET\'S PICK A PLAYLIST FOR YOU</string>
    <string name="moods_amp_moment"><![CDATA[Moods & Moment]]></string>
    <string name="genre">Genre</string>
    <string name="what_is_best_choice_today">WHAT IS BEST CHOICE TODAY</string>
    <string name="chart">Chart</string>
    <string name="global">Global</string>
    <string name="top_tracks">Top tracks</string>
    <string name="top_artists">Top artists</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="lyrics">Lyrics</string>
    <string name="all">All</string>
    <string name="videos">Videos</string>
    <string name="content">Content</string>
    <string name="storage">Storage</string>
    <string name="player_cache">Player Cache</string>
    <string name="downloaded_cache">Downloaded Cache</string>
    <string name="thumbnail_cache">Thumbnail Cache</string>
    <string name="backup">Backup</string>
    <string name="backup_your_data">Backup Your Data</string>
    <string name="save_all_your_playlist_data">Save all your playlist data</string>
    <string name="restore_your_data">Restore Your Data</string>
    <string name="restore_your_saved_data">Restore your saved data</string>
    <string name="about_us">About us</string>
    <string name="version">Version</string>
    <string name="github">Github</string>
    <string name="maxrave_dev">maxrave-dev</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="paypal">PayPal</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="youtube_url">YouTube URL</string>
    <string name="download_url">Download URL</string>
    <string name="now_playing">Now Playing</string>
    <string name="queue">Queue</string>
    <string name="recently">Recently</string>
    <string name="settings">Settings</string>
    <string name="now_playing_upper">NOW PLAYING</string>
    <string name="language">Language</string>
    <string name="what_do_you_want_to_listen_to">What do you want to listen to?</string>
    <string name="songs_inArtist">Songs</string>
    <string name="albums_inArtist">Albums</string>
    <string name="singles_inArtist">Singles</string>
    <string name="fans_might_also_like_inArtist">Fans might also like</string>
    <string name="crash_log">SimpMusic crashed. Sorry for this problem.\nSend crash-log to developer</string>
    <string name="crash">Crash</string>
    <string name="send">Send</string>
    <string name="mail_subject">Report Crash</string>
    <string name="delete_song_from_playlist">Delete this song from playlist</string>
    <string name="log_in">Log in</string>
    <string name="log_in_to_YouTube">Log in to YouTube</string>
    <string name="log_in_to_get_personally_data">Log in to get personally data</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed</string>
    <string name="log_out">Log out from YouTube</string>
    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="playlist">Playlist</string>
    <string name="restart_app">Restart app to apply the change</string>
    <string name="balance_media_loudness">Balance media loudness</string>
    <string name="normalize_volume">Normalize Volume</string>
    <string name="audio">Audio</string>
    <string name="no_equalizer">Your device doesn\'t have equalizer</string>
    <string name="open_system_equalizer">Open system equalizer</string>
    <string name="use_your_system_equalizer">Use your system equalizer</string>
    <string name="version_format" translatable="false">v%s</string>
    <string name="streaming_data_provider_piped">Streaming data provider (Piped)</string>
    <string name="itag">Itag</string>
    <string name="mime_type">Mime Type</string>
    <string name="bitrate">Bitrate</string>
    <string name="warning">Warning</string>
    <string name="change_language_warning">Changing language will close your app. Are you sure?</string>
    <string name="this_link_is_not_supported">This link is not supported</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="description">Description</string>
    <string name="playback">Playback</string>
    <string name="save_playback_state">Save Playback State</string>
    <string name="save_shuffle_and_repeat_mode">Save shuffle and repeat mode</string>
    <string name="skip_silent">Skip Silent</string>
    <string name="skip_no_music_part">Skip no music part</string>
    <string name="time_out_check_internet_connection_or_change_piped_instance_in_settings">Time out, check internet connection (%1$d)</string>
    <string name="save_last_played">Save Last Played</string>
    <string name="save_last_played_track_and_queue">Save last played track and queue</string>
    <string name="update_available">New update available</string>
    <string name="update_message">"Version %1$s available\nRelease: %2$s\nChange logs:\n%3$s "</string>
    <string name="check_for_update">Check for update</string>
    <string name="last_checked_at">Last checked at %1$s</string>
    <string name="checking">Checking</string>
    <string name="sponsorblock_skip_segment">SponsorBlock: Skip %1$s segment</string>
    <string name="sponsor">Sponsor</string>
    <string name="self_promotion">Self Promotion</string>
    <string name="interaction">Interaction</string>
    <string name="intro">Intro</string>
    <string name="outro">Outro</string>
    <string name="preview">Preview</string>
    <string name="music_off_topic">Music Off-topic</string>
    <string name="poi_highlight">POI Highlight</string>
    <string name="filler">Filler</string>
    <string name="sponsorBlock">SponsorBlock</string>
    <string name="enable_sponsor_block">Enable SponsorBlock</string>
    <string name="categories_sponsor_block">Select skip-segment behavior</string>
    <string name="sync">Sync to YouTube Music</string>
    <string name="update_playlist">Update playlist from YouTube Music</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="credit_app">A simple music app using YouTube Music for backend \n\nSimpMusic is an open source project to stream music from YouTube and YouTube Music without ads and tracking. SimpMusic provides many features:\n\n - Streaming music \n - Synced lyrics\n - Personalize data\n - etc… \n\nSimpMusic is always free and no ads\n\nBuild with ❤️ from Tuan Minh Nguyen Duc (maxrave-dev)</string>
    <string name="issue_tracker">Issue Tracker</string>
    <string name="copyright" translatable="false">©2023-2025 Tuan Minh Nguyen Duc (maxrave-dev)</string>
    <string name="youtube_account">YouTube Account</string>
    <string name="no_account">No account</string>
    <string name="add_an_account">Add an account</string>
    <string name="guest">Guest</string>
</resources>