<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp">

            <ImageButton
                android:id="@+id/btClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"

                android:src="@drawable/baseline_close_24">

            </ImageButton>

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/youtube_account"
                android:textColor="@android:color/white">

            </TextView>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvNoAccount"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:layout_gravity="center_horizontal">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rvAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_account"
            tools:itemCount="3">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true">

            </com.google.android.material.progressindicator.CircularProgressIndicator>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/ivGuest"
                android:paddingVertical="12sp"
                android:src="@drawable/baseline_people_alt_24">

            </ImageView>

            <TextView
                android:id="@+id/tvGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ivGuest"
                android:text="@string/guest"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:textSize="13sp">

            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/ivLogOut"
                android:paddingVertical="12sp"
                android:src="@drawable/baseline_close_24">

            </ImageView>

            <TextView
                android:id="@+id/tvLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ivLogOut"
                android:text="@string/log_out"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:textSize="13sp">

            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btAddAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/ivAddAccount"
                android:paddingVertical="12sp"
                android:src="@drawable/baseline_playlist_add_24">

            </ImageView>

            <TextView
                android:id="@+id/tvAddAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ivAddAccount"
                android:text="@string/add_an_account"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:textSize="13sp">

            </TextView>
        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
