<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.login.LogInFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topAppBarLayout"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/log_in"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
            app:navigationIconTint="@android:color/white"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_below="@id/topAppBarLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/topAppBarLayout"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/btLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in">

        </Button>
    </LinearLayout>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

    </com.google.android.material.progressindicator.CircularProgressIndicator>
</RelativeLayout>